--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_nav_bar: ^5.0.7
   flutter_foreground_task: ^9.1.0
   url_launcher: ^6.3.2
+  googleapis_auth: ^2.0.0
  
   
  
@@ -75,6 +76,7 @@ flutter:
       - assets/images/no-picture-taking_2542641.png
       - assets/images/logo.png
       - assets/images/iFlribWNhe.json
+      - assets/images/service-account.json
       
   #   - images/a_dot_ham.jpeg
 
